# irobot

./: .gitignore  CMakeLists.txt  README.md  config.in  install_package.bat  install_package.sh
apps/: CMakeLists.txt
apps/irobot/: CMakeLists.txt
apps/irobot_headless/: CMakeLists.txt
docs/: CMakeLists.txt
include/: common.hpp
libs/: CMakeLists.txt
libs/FFmpeg/: CMakeLists.txt
libs/FFmpeg/ffmpeg_x64-windows/: CONTROL
libs/FFmpeg/ffmpeg_x64-windows/debug/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  swresample.lib  swscale.lib
libs/FFmpeg/ffmpeg_x64-windows/debug/lib/pkgconfig/: libavcodec.pc
libs/FFmpeg/ffmpeg_x64-windows/lib/: avfilter.lib  avformat.lib  avutil.lib  swresample.lib  swscale.lib
libs/FFmpeg/ffmpeg_x64-windows/lib/pkgconfig/: libavcodec.pc
libs/FFmpeg/ffmpeg_x64-windows/share/ffmpeg/: vcpkg.spdx.json  vcpkg_abi_info.txt
server/: irobot-server  scrcpy-server
src/: command.cpp  command.hpp  common.hpp  compat.hpp  controller.cpp  controller.hpp  fact.cpp  fact.hpp  irobot.cpp  irobot_core.cpp  irobot_core.hpp  irobot_headless.cpp  irobot_option.cpp  irobot_option.hpp  irobot_ui.cpp  scrcpy.cpp  scrcpy.hpp  server.cpp  server.hpp
src/agent/: agent_controller.cpp  agent_controller.hpp  agent_manager.cpp  agent_manager.hpp  agent_recorder.cpp  agent_recorder.hpp  agent_stream.cpp  agent_stream.hpp
src/ai/: brain.cpp  brain.hpp
src/android/: device.cpp  device.hpp  file_handler.cpp  file_handler.hpp  input.hpp  keycodes.hpp  receiver.cpp  receiver.hpp
src/core/: actor.cpp  actor.hpp  common.hpp  controller.cpp  controller.hpp  device_server.cpp  device_server.hpp  irobot_core.cpp  irobot_core.hpp  server.cpp  server.hpp
src/image_hash/: img_hash.hpp  precomp.hpp
src/message/: blob_msg.cpp  blob_msg.hpp  control_msg.cpp  control_msg.hpp  device_msg.cpp  device_msg.hpp
src/platform/: command.cpp  command.hpp  net.cpp  net.hpp
src/platform/unix/: command.cpp  net.cpp
src/platform/windows/: command.cpp  net.cpp
src/ui/: cli.cpp  cli.hpp  event_converter.cpp  event_converter.hpp  events.hpp  input_manager.cpp  input_manager.hpp  irobot_ui.cpp  irobot_ui.hpp  null_input_manager.cpp  null_input_manager.hpp  screen.cpp  screen.hpp  tiny_xpm.cpp  tiny_xpm.hpp
src/util/: buffer_util.hpp  cbuf.hpp  helper.cpp  helper.hpp  json.cpp  json.hpp  lock.hpp  log.hpp  net.cpp  net.hpp  queue.hpp  str_util.cpp  str_util.hpp
src/video/: common.cpp  decoder.cpp  decoder.hpp  fps_counter.cpp  fps_counter.hpp  recorder.cpp  recorder.hpp  stream.cpp  stream.hpp  utils.cpp  utils.hpp  video_buffer.cpp  video_buffer.hpp
tests/: CMakeLists.txt  all_tests.cpp  test_buffer_util.cpp  test_cbuf.cpp  test_cli.cpp  test_control_msg.cpp  test_json.cpp  test_opencv.cpp  test_queue.cpp  test_str_util.cpp
